--- a/perfil.html
+++ b/perfil.html
@@ -38,6 +38,7 @@
 					<p><b>Fecha de nacimiento:</b><br>12-01-1996<br></p>
 					<p><b>Direccion:</b><br>Alarife marien de Marguan 6,6A<br></p>
 					<p><b>Telefono:</b><br>645515267<br></p>
+					<p><b>E-mail:</b><br>rubenbros@hotmail.es<br></p>
 					<br/><input type="button" value="Cambiar contrasena"/>
 					<a href="modificar.html"><button>Modificar datos</button></a>
 					<input type="button" value="Lista de deseados"/>
