--- a/Modificar.html
+++ b/Modificar.html
@@ -38,6 +38,7 @@
 						<p><b>Fecha de nacimiento:</b><br><input type="text" value="12-01-1996" name="Fecha"/><br></p>
 						<p><b>Direccion:</b><br><input type="text" value="Alarife marien de marguan 6,6A" name="Direccion"/><br></p>
 						<p><b>Telefono:</b><br><input type="text" value="645515267" name="Telefono"/><br></p>
+						<p><b>E-mail:</b><br><input type="text" value="rubenbros@hotmail.es" name="E-mail"/><br></p>
 						<br/><input type="submit" value="Guardar"/><input type="reset" value="Restablecer anteriores"/></form><a href="index.html"><button>Cancelar</button></a>
 				</div>
 			</div>
