--- a/lista.html
+++ b/lista.html
@@ -11,9 +11,27 @@
 	<body>
 		<header class="page-header">
 			<div class="row" style="background:#428BCA">
-				<div class="col-xs-1 col-md-2" >
+				<div class="col-xs-0 col-md-2">
+				</div>
+				<div class="col-xs-2 col-md-2" >
 					<div >
-						<img src="./img/asa.jpg" alt="logo" class="img-thumbnail">
+						<img src="./img/logo.jpg" alt="logo" class="img-thumbnail">
+					</div>
+				</div>
+				<div class="col-xs-10 col-md-8">
+					<div class="col-xs-1 col-md-3">
+					</div>
+					<div class="col-xs-9 col-md-5">
+						<form class="navbar-form navbar-left" role="search">
+	  						<div class="form-group">
+	    						<input type="text" class="form-control" placeholder="Search">
+								<button type="button" class="btn btn-default navbar-btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+	  						</div>
+							<div class="form-group">
+								<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></button>
+								<button type="button" class="btn btn-default navbar-btn"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></button>
+							</div>
+						</form>
 					</div>
 				</div>
 			</div>
@@ -31,67 +49,67 @@
 
 					<!--Articulo1-->
 					<div class="col-xs-6 col-md-4">
-						<div class="thumbnail">
-							<img src="./img/asa.jpg" alt="imagen">
+						<div class="thumbnail btn btn-primary">
+							<img src="./img/obj_list1.jpg" alt="imagen">
 						</div>
 						<div class="thumbnail panel-primary">
-							<header class="panel-heading"><h4>Producto</h4></header>
-							<div class="panel-footer"><h4>9 <span class="small">,95</span></h4></div>
+							<header class="panel-heading"><h4>Memoria 16GB</h4></header>
+							<div class="panel-footer"><h4>4 <span class="small">,95€</span></h4></div>
 						</div>
 					</div>
 
 					<!--Articulo2-->
 					<div class="col-xs-6 col-md-4">
-						<div class="thumbnail">
-							<img src="./img/asa.jpg" alt="imagen">
+						<div class="thumbnail btn btn-primary">
+							<img src="./img/obj_list2.jpg" alt="imagen">
 						</div>
 						<div class="thumbnail panel-primary">
-							<header class="panel-heading"><h4>Producto</h4></header>
-							<div class="panel-footer"><h4>9 <span class="small">,95</span></h4></div>
+							<header class="panel-heading"><h4>    Weimei We 16GB</h4></header>
+							<div class="panel-footer"><h4>120<span class="small">€</span></h4></div>
 						</div>
 					</div>
 
 						<!--Articulo3-->
 						<div class="col-xs-6 col-md-4">
-							<div class="thumbnail">
-								<img src="./img/asa.jpg" alt="imagen">
+							<div class="thumbnail btn btn-primary">
+								<img src="./img/obj_list3.jpg" alt="imagen">
 							</div>
 							<div class="thumbnail panel-primary">
-								<header class="panel-heading"><h4>Producto</h4></header>
-								<div class="panel-footer"><h4>9 <span class="small">,95</span></h4></div>
+								<header class="panel-heading"><h4>    Maizu M3 Note 16GB</h4></header>
+								<div class="panel-footer"><h4>170<span class="small">€</span></h4></div>
 							</div>
 						</div>
 
 					<!--Articulo4-->
 					<div class="col-xs-6 col-md-4">
-						<div class="thumbnail">
-							<img src="./img/asa.jpg" alt="imagen">
+						<div class="thumbnail btn btn-primary">
+							<img src="./img/obj_list4.jpg" alt="imagen">
 						</div>
 						<div class="thumbnail panel-primary">
-							<header class="panel-heading"><h4>Producto</h4></header>
-							<div class="panel-footer"><h4>9 <span class="small">,95</span></h4></div>
+							<header class="panel-heading"><h4>    750 Evo SSD 250GB</h4></header>
+							<div class="panel-footer"><h4>70<span class="small">,95</span></h4></div>
 						</div>
 					</div>
 
 					<!--Articulo5-->
 					<div class="col-xs-6 col-md-4">
-						<div class="thumbnail">
-							<img src="./img/asa.jpg" alt="imagen">
+						<div class="thumbnail btn btn-primary">
+							<img src="./img/obj_list5.jpg" alt="imagen">
 						</div>
 						<div class="thumbnail panel-primary">
-							<header class="panel-heading"><h4>Producto</h4></header>
-							<div class="panel-footer"><h4>9 <span class="small">,95</span></h4></div>
+							<header class="panel-heading"><h4>    Reproductor MP3 MicroSD</h4></header>
+							<div class="panel-footer"><h4>7<span class="small">,90€</span></h4></div>
 						</div>
 					</div>
 
 					<!--Articulo6-->
 					<div class="col-xs-6 col-md-4">
-						<div class="thumbnail">
-							<img src="./img/asa.jpg" alt="imagen">
+						<div class="thumbnail btn btn-primary">
+							<img src="./img/obj_list6.jpg" alt="imagen">
 						</div>
 						<div class="thumbnail panel-primary">
-							<header class="panel-heading"><h4>Producto</h4></header>
-							<div class="panel-footer"><h4>9 <span class="small">,95</span></h4></div>
+							<header class="panel-heading"><h4>    MP3 Clip Mint</h4></header>
+							<div class="panel-footer"><h4>23<span class="small">,50€</span></h4></div>
 						</div>
 					</div>
 
