--- a/registro_login.html
+++ b/registro_login.html
@@ -9,10 +9,27 @@
 		<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 	</head>
 	<body>
-		<header class="page-header" >
-			<div  class="row" >
-				<div class="thumbnail" style="background:#428BCA">
-					<img src="./img/asa.jpg" alt="logo" class="img-thumbnail">
+		<header class="page-header">
+			<div class="row" style="background:#428BCA">
+				<div class="col-xs-0 col-md-2">
+				</div>
+				<div class="col-xs-2 col-md-2" >
+					<div >
+						<img src="./img/logo.jpg" alt="logo" class="img-thumbnail">
+					</div>
+				</div>
+				<div class="col-xs-10 col-md-8">
+					<div class="col-xs-1 col-md-3">
+					</div>
+					<div class="col-xs-9 col-md-5">
+						<form class="navbar-form navbar-left" role="search">
+	  						<div class="form-group">
+	    						<input type="text" class="form-control" placeholder="Search">
+								<button type="button" class="btn btn-default navbar-btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+	  						</div>
+							
+						</form>
+					</div>
 				</div>
 			</div>
 		</header>
